--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,11 @@
 version: 2
+workfrows:
+  version: 2
+  build:
+    jobs:
+      - dotnet-build
+      - vue-build
+      
 jobs:
   dotnet-build:
     docker:
