--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,5 +37,5 @@ workflows:
   version: 2
   dotnet_vue_build:
     jobs:
-      - dotnet-build
-      - vue-build
+      - dotnet_build
+      - vue_build
