--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,17 +7,17 @@ jobs:
     steps:
       - checkout
       - run:
-        name: .NET Restore
-        command: dotnet restore
-        working_directory: api
+          name: .NET Restore
+          command: dotnet restore
+          working_directory: api
       - run:
-        name: .NET Build
-        command: dotnet build
-        working_directory: api
+          name: .NET Build
+          command: dotnet build
+          working_directory: api
       - run:
-        name: .NET Run
-        command: dotnet run
-        working_directory: api
+          name: .NET Run
+          command: dotnet run
+          working_directory: api
 
   vue_build:
     docker:
@@ -25,13 +25,13 @@ jobs:
     steps:
       - checkout
       - run:
-        name: npm Install
-        command: npm i
-        working_directory: front
+          name: npm Install
+          command: npm install
+          working_directory: front
       - run:
-        name: npm Run
-        command: npm run serve
-        working_directory: front
+          name: npm Run
+          command: npm run serve
+          working_directory: front
 
 workflows:
   version: 2
