--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,6 @@ jobs:
           name: .NET Build
           command: dotnet build
           working_directory: api
-      - run:
-          name: .NET Run
-          command: dotnet run
-          working_directory: api
 
   vue_build:
     docker:
@@ -29,8 +25,8 @@ jobs:
           command: npm install
           working_directory: front
       - run:
-          name: npm Run
-          command: npm run serve
+          name: npm Build
+          command: npm run build
           working_directory: front
 
 workflows:
